<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration.RegistrationActivity"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/background"
            android:paddingBottom="16dp">
            <!--logo -->
            <ImageView
                android:id="@+id/img_registration_logo"
                android:layout_width="@dimen/logoW"
                android:layout_height="@dimen/logoH"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp"
                android:src="@mipmap/logo" />
            <!-- welcome-->
            <TextView
                android:id="@+id/tv_registration_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_registration_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/RegistrationSoleek"
                android:textColor="#000"
                android:textSize="@dimen/welcomeZ" />
            <!--enjoy-->
            <TextView
                android:id="@+id/tv_registration_enjoy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_registration_welcome"
                android:layout_marginStart="32dp"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/haveFun"
                android:textSize="@dimen/enjoyZ" />
            <!--userName layout-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayout_registration_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_registration_enjoy"
                android:layout_marginStart="32dp"
                android:layout_marginTop="@dimen/marginTop"
                android:layout_marginEnd="32dp">


                <EditText
                    android:id="@+id/et_registration_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textPersonName"
                    android:drawableEnd="@drawable/profile"
                    android:paddingEnd="8dp"/>


            </android.support.design.widget.TextInputLayout>

            <!--password layout-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayout_registration_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputLayout_registration_userName"
                android:layout_marginStart="32dp"
                android:layout_marginTop="@dimen/marginTop"
                android:layout_marginEnd="32dp">

                <EditText
                    android:id="@+id/et_registration_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:drawableEnd="@drawable/lock"
                    android:paddingEnd="8dp"/>
            </android.support.design.widget.TextInputLayout>

            <!--confirm password layout-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayout_registration_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputLayout_registration_password"
                android:layout_marginStart="32dp"
                android:layout_marginTop="@dimen/marginTop"
                android:layout_marginEnd="32dp">

                <EditText
                    android:id="@+id/et_registration_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:drawableEnd="@drawable/lock"
                    android:paddingEnd="8dp"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_registration"
                android:layout_width="@dimen/login_btnW"
                android:layout_height="@dimen/login_btnH"
                android:background="@drawable/button_shape"
                android:layout_below="@+id/inputLayout_registration_confirm_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="@dimen/btnZ"
                android:onClick="RegistrationClick"
                />
            <TextView
                android:id="@+id/tv_other_auth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_registration"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/marginTop"
                android:layout_marginStart="@dimen/marginTop"
                android:text="@string/signup_with"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/forgetZ" />
            <LinearLayout
                android:id="@+id/other_auth_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_below="@id/tv_other_auth"
                android:layout_marginTop="@dimen/marginTop"
                android:layout_marginBottom="@dimen/marginTop"
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp">
                <com.facebook.login.widget.LoginButton
                    android:id="@+id/facebook_auth"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/reg_icon"
                    android:onClick="AuthenticateWithFacebook"
                    android:padding="8dp"/>
                <com.google.android.gms.common.SignInButton
                    android:id="@+id/google_auth"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/reg_icon"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>
            <TextView
                android:id="@+id/have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/other_auth_layout"
                android:layout_alignStart="@id/btn_registration"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/haveAccount"
                android:onClick="BackToLogin"
                />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/other_auth_layout"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/marginTop"
                android:layout_toEndOf="@id/have_account"
                android:text="@string/loginText"
                android:textColor="#000"
                android:textSize="@dimen/singUpZ"
                android:onClick="BackToLogin"/>

        </RelativeLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>